test/scc/expr/semantic-errors/124.a
124.t:8:11: error: invalid initializer